# typelang-hm-rs

./: .gitignore  AGENTS.md  BOOT_PROMPT_EN.txt  Cargo.toml  EBNF.md  Makefile  README.md  codex-strings.txt  coverage.json  mcp__serena__initial_instructions.txt
.codex/: AGENTS.md
.codex-home/: AGENTS.md  history.jsonl
.codex-home/.codex/: AGENTS.md  auth.json  config.toml  version.json
.codex-home/.serena/: serena_config.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: MODEL_INPUT.md  project.yml
.summ/: BUILD_ERRORS.txt  PUBLIC_API.tsv  RECENT_LOG.txt  TEST_ERRORS.txt
docs/: typeclass-extension.md
documents/: native.md
documents/plan/: native-compile-spec.md  testplan.md
examples/: advanced.tl  basics.tl  ebnf_blackbox.tl  full_suite.tl  native_test.tl  step1_numbers.tl  step2_functions.tl  step3_conditionals.tl
runtime_native/: Cargo.toml  build.rs
runtime_native/src/: data.rs  (+6 more)
src/: ast.rs  errors.rs  evaluator.rs  infer.rs  intrinsics.rs  lexer.rs  lib.rs  parser.rs  primitives.rs  runtime.rs  typesys.rs
tests/: ast_display.rs  boundary_lex_parse.rs  core_ir_tests.rs  error_cases.rs  error_message_patterns.rs  errors.rs  errors_display.rs  evaluator.rs  evaluator_additional.rs  evaluator_more.rs  examples_types.rs  infer_additional.rs  infer_more.rs  integration.rs  integration_basic.rs  lexer_additional.rs  lexer_more.rs  lexer_parser.rs  lexer_unicode.rs  native_build.rs  parser_additional.rs  parser_more.rs  repl_load_program_errors.rs  test_support.rs  types_infer.rs  typesys_additional.rs  unit_suite.rs
(+71 files in other folders)
